<resources>
    <string name="app_name">Unsecure Bank</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="initial_balance">Initial balance: 0.00</string>
    <string name="register">Register</string>
    <string name="balance">Balance:</string>
    <string name="amount">Amount: 0.00</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="login">Login</string>
    <string name="balance_with_value">Balance: %1$.2f</string>
    <string name="invalid_input">Invalid input</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="account_created">Account created successfully</string>
    <string name="deposit_success">Deposit successful</string>
    <string name="withdraw_success">Withdrawal successful</string>
    <string name="insufficient_balance">Insufficient balance</string>
</resources>